syntax = "proto3";

package bytebase.store;

option go_package = "generated-go/store";

// Activity types for webhook notifications.
message Activity {
  // Activity type enumeration.
  enum Type {
    // Unspecified type.
    TYPE_UNSPECIFIED = 0;
    // Notifications via webhooks.
    //
    // NOTIFY_ISSUE_APPROVED represents the issue approved notification.
    NOTIFY_ISSUE_APPROVED = 23;
    // NOTIFY_PIPELINE_ROLLOUT represents the pipeline rollout notification.
    NOTIFY_PIPELINE_ROLLOUT = 24;
    // Issue related activity types.
    //
    // ISSUE_CREATE represents creating an issue.
    ISSUE_CREATE = 1;
    // ISSUE_COMMENT_CREATE represents commenting on an issue.
    ISSUE_COMMENT_CREATE = 2;
    // ISSUE_FIELD_UPDATE represents updating the issue field, likes title, description, etc.
    ISSUE_FIELD_UPDATE = 3;
    // ISSUE_STATUS_UPDATE represents the issue status change, including OPEN, CLOSE, CANCEL for now.
    ISSUE_STATUS_UPDATE = 4;
    // ISSUE_APPROVAL_NOTIFY is the type for notifying issue approval.
    ISSUE_APPROVAL_NOTIFY = 21;
    // ISSUE_PIPELINE_STAGE_STATUS_UPDATE represents the pipeline stage status change, including BEGIN, END for now.
    ISSUE_PIPELINE_STAGE_STATUS_UPDATE = 5;
    // ISSUE_PIPELINE_TASK_RUN_STATUS_UPDATE represents the pipeline task run status change, including PENDING, RUNNING, DONE, FAILED, CANCELED.
    ISSUE_PIPELINE_TASK_RUN_STATUS_UPDATE = 22;
  }
}

message ProjectWebhook {
  enum Type {
    // Unspecified type.
    TYPE_UNSPECIFIED = 0;
    // Slack integration.
    SLACK = 1;
    // Discord integration.
    DISCORD = 2;
    // Microsoft Teams integration.
    TEAMS = 3;
    // DingTalk integration.
    DINGTALK = 4;
    // Feishu integration.
    FEISHU = 5;
    // WeCom (WeChat Work) integration.
    WECOM = 6;
    // Lark integration.
    LARK = 8;
  }

  // Webhook type.
  Type type = 1;
  // Webhook title.
  string title = 2;
  // Webhook URL.
  string url = 3;
  // List of activities that trigger this webhook.
  repeated Activity.Type activities = 4;
  // If direct_message is set, the notification is sent directly
  // to the persons and url will be ignored.
  // IM integration setting should be set for this function to work.
  bool direct_message = 5;
}
